--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,10 +27,14 @@
 				<div id="rooms" class="rooms">
 					<div class="quartos" (click)="onClick($event.target)">
 						<span class="label">
-							Q
+							<span class="icon-room">
+								<img [attr.src]="vars.icons.room" [attr.alt]="Q">
+							</span>
 							<span class="val" [textContent]="mdl.room.total"></span>
 						<span class="pessoas">
-								P
+								<span class="icon-people">
+									<img [attr.src]="vars.icons.people" [attr.alt]="P">
+								</span>
 								<span class="val" [textContent]="mdl.room.people.total"></span>
 						</span>
 						</span>
@@ -38,7 +42,7 @@
 					<div [attr.class]="'room' + (open.rooms ? ' show' : '')">
 						<div [attr.class]="'room' + (n + 1)" *ngFor="let p of mdl.room.people.list; let n = index;">
 							<span class="header">Quarto {{n + 1}} <span class="remove" (click)="rmRoom(n)">&times;</span></span>
-							<div class="campos">
+							<div class="campos wrap">
 								<label>
 									<span>Adultos (18+):</span>
 									<input type="number" placeholder="" min="1" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event)">
@@ -47,10 +51,12 @@
 									<span>Menor (até 17)</span>
 									<input min="0" step="1" type="number" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event)">
 								</label>
-								<label *ngFor="let pp of p.less18.list; let nn = index">
-									<span>{{ nn + 1 }}ª Menor</span>
-									<input type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age"> anos
-								</label>
+								<div class="children wrap">
+									<label *ngFor="let pp of p.less18.list; let nn = index">
+										<span>{{ nn + 1 }}ª Menor</span>
+										<input type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age">
+									</label>
+								</div>
 							</div>
 						</div>
 						<a href="javascript:;" class="add bgc c1" (click)="addRoom(mdl.room.total)">Adicionar Quarto</a>
