--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,12 +28,12 @@
 					<div class="quartos" (click)="onClick($event.target)">
 						<span class="label">
 							<span class="icon-room">
-								<img [attr.src]="vars.icons.room" [attr.alt]="Q">
+								<img [attr.src]="vars.icons.room" alt="Q">
 							</span>
 							<span class="val" [textContent]="mdl.room.total"></span>
 						<span class="pessoas">
 								<span class="icon-people">
-									<img [attr.src]="vars.icons.people" [attr.alt]="P">
+									<img [attr.src]="vars.icons.people" alt="P">
 								</span>
 								<span class="val" [textContent]="mdl.room.people.total"></span>
 						</span>
