--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,19 +41,24 @@
 					</div>
 					<div [attr.class]="'room' + (open.rooms ? ' show' : '')">
 						<div [attr.class]="'room' + (n + 1)" *ngFor="let p of mdl.room.people.list; let n = index;">
-							<span class="header">Quarto {{n + 1}} <span class="remove" (click)="rmRoom(n)">&times;</span></span>
+							<span class="header">
+								Quarto {{n + 1}}
+								<span class="icon-remove remove" (click)="rmRoom(n)">
+									<img [attr.src]="vars.icons.remove" alt="&times;">
+								</span>
+							</span>
 							<div class="campos wrap">
 								<label>
-									<span>Adultos (18+):</span>
+									<span>Adultos<br>(18+)</span>
 									<input type="number" placeholder="" min="1" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event)">
 								</label>
 								<label>
-									<span>Menor (até 17)</span>
+									<span>Menor<br>(até 17)</span>
 									<input min="0" step="1" type="number" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event)">
 								</label>
 								<div class="children wrap">
 									<label *ngFor="let pp of p.less18.list; let nn = index">
-										<span>{{ nn + 1 }}ª Menor</span>
+										<span>{{ nn + 1 }}º Menor</span>
 										<input type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age">
 									</label>
 								</div>
