--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -161,6 +161,7 @@
 							padding: 1rem;
 							overflow: auto;
 							height: 17rem;
+							background-color: #fff;
 							.header {
 								color: #222;
 								border-bottom: 1px solid #aaa;
