--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@
 			</div>
 		</form>
 	</div>
-	<div class="foot">
+	<div class="foot" *ngIf="vars.hotelList.HotelListResponse">
 		{{vars.hotelList}}
 	</div>
 </div>
