--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,6 +79,6 @@
 		</form>
 	</div>
 	<div class="foot" *ngIf="vars.hotelList.HotelListResponse">
-		{{ JSON.stringify(vars.hotelList) }}
+		{{ vars.hotelList.HotelListResponseStr }}
 	</div>
 </div>
