--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -268,6 +268,7 @@
 									width: 100%;
 									display: block;
 									transition: left .4s ease;
+									background-color: #fff;
 								}
 							}
 							.header {
@@ -341,6 +342,9 @@
 							display: inline-block;
 							margin: 1rem 0 0;
 							float: right;
+							&[hidden] {
+								display: none;
+							}
 						}
 					}
 					.submit {
