--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 		<p class="fgc c1" [innerHTML]="vars.slogan"></p>
 	</div>
 	<div class="body">
-		<form #frm="ngForm" class="wrap" (ngSubmit)="onSubmit(frm)" novalidate>
+		<form class="wrap" (ngSubmit)="onSubmit()" novalidate>
 			<div class="search">
 				<label>
 					<ng2-completer [(initialValue)]="mdl.busca.init" [autoMatch]="true" [overrideSuggested]="true" [inputClass]="'busca-ctrl'" [autofocus]="true" [textSearching]="null" [textNoResults]="null" name="busca" [inputName]="'busca'" [placeholder]="mdl.busca.placeholder" [(ngModel)]="mdl.busca.val" [datasource]="customData" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
@@ -56,11 +56,11 @@
 									<div class="people">
 										<label>
 											<span>Adultos (18 anos)</span>
-											<input type="number" placeholder="" min="1" max="{{p.max}}" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event)">
+											<input type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
 										</label>
 										<label>
 											<span>Crianças (0-17 anos)</span>
-											<input min="0" max="{{p.max}}" step="1" type="number" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event)">
+											<input min="0" max="{{mdl.room.people.limit}}" step="1" type="number" id="children[{{p.name}}]" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event, 'children[' + p.name + ']')">
 										</label>
 									</div>
 									<div class="children wrap">
@@ -72,7 +72,7 @@
 								</div>
 							</div>
 						</div>
-						<a [hidden]="mdl.room.total >= mdl.room.limit" href="javascript:;" class="add bgc c1" (click)="addRoom(mdl.room.total)">Adicionar Quarto</a>
+						<a [hidden]="mdl.room.total >= mdl.room.limit" [attr.class]="'add bgc c1' + (mdl.room.disabled ? ' disabled' : '')" href="javascript:;" (click)="addRoom(mdl.room.total)">Adicionar Quarto</a>
 					</div>
 				</div>
 				<div class="submit">
