--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 						<span class="label"><span>Check-out</span></span>
 					</label>
 				</div>
-				<div id="rooms" class="rooms" (keydown.Escape)="open.rooms = false;">
+				<div id="rooms" class="rooms" (keydown.esc)="open.rooms = false;">
 					<div class="quartos" (click)="onClick($event.target)">
 						<span class="label">
 							<span class="icon-room">
@@ -46,7 +46,7 @@
 									Quarto {{n + 1}}
 								</span>
 							</a>
-							<span class="icon-remove remove" (click)="rmRoom(show.room)">
+							<span [hidden]="mdl.room.total <= 1" class="icon-remove remove" (click)="rmRoom(show.room)">
 								<img [attr.src]="vars.icons.remove" alt="&times;">
 							</span>
 						</div>
@@ -56,17 +56,17 @@
 									<div class="people">
 										<label>
 											<span>Adultos (18 anos)</span>
-											<input type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
+											<input (focus)="show.room = show.room !== n ? n : show.room" type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
 										</label>
 										<label>
 											<span>Crianças (0-17 anos)</span>
-											<input min="0" max="{{mdl.room.people.limit}}" step="1" type="number" id="children[{{p.name}}]" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event, 'children[' + p.name + ']')">
+											<input (focus)="show.room = show.room !== n ? n : show.room" min="0" max="{{mdl.room.people.limit}}" step="1" type="number" id="children[{{p.name}}]" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event, 'children[' + p.name + ']')">
 										</label>
 									</div>
 									<div class="children wrap">
 										<label *ngFor="let pp of p.less18.list; let nn = index">
 											<span>Criança {{ nn + 1 }}</span>
-											<input type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age">
+											<input (focus)="show.room = show.room !== n ? n : show.room" type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age">
 										</label>
 									</div>
 								</div>
