--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -226,7 +226,7 @@
 					}
 					.rooms {
 						width: 30%;
-						cursor: pointer;
+						cursor: pointer !important;
 						.quartos {
 							border: 1px solid #aaa;
 							display: block;
@@ -298,7 +298,7 @@
 								overflow: auto;
 								height: 100%;
 								display: block;
-								width: 103%;
+								width: 100%;
 								label {
 									margin-right: 1rem;
 									margin-bottom: 1rem;
@@ -335,6 +335,7 @@
 						}
 						.room.show {
 							display: block;
+							cursor: default !important;
 						}
 						.add {
 							cursor: pointer;
@@ -350,6 +351,11 @@
 							&.disabled {
 								background-color: #aaa;
 							}
+							&:focus,
+							&:hover,
+							&:active {
+								opacity: .7;
+							}
 						}
 					}
 					.submit {
@@ -364,6 +370,12 @@
 							border: 0;
 							text-align: center;
 							cursor: pointer;
+							border: 1px solid #243E6F;
+							&:focus,
+							&:hover,
+							&:active {
+								opacity: .7;
+							}
 						}
 					}
 				}
@@ -375,6 +387,9 @@
 						width: 100%;
 						height: auto;
 						display: block;
+					}
+					&[hidden] {
+						visibility: hidden;
 					}
 				}
 				.icon-room,
