--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 						<span class="label"><span>Check-out</span></span>
 					</label>
 				</div>
-				<div id="rooms" class="rooms" (keydown.esc)="open.rooms = false;">
+				<div id="rooms" class="rooms">
 					<div class="quartos" (click)="onClick($event.target)">
 						<span class="label">
 							<span class="icon-room">
