--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 		<form class="wrap" (ngSubmit)="onSubmit()" novalidate>
 			<div class="search">
 				<label>
-					<ng2-completer [(initialValue)]="mdl.busca.init" [autoMatch]="true" [overrideSuggested]="true" [inputClass]="'busca-ctrl'" [autofocus]="true" [textSearching]="null" [textNoResults]="null" name="busca" [inputName]="'busca'" [placeholder]="mdl.busca.placeholder" [(ngModel)]="mdl.busca.val" [datasource]="customData" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
+					<ng2-completer (selected)="onCompleterSelected($event)" [clearUnselected]="true" [autoMatch]="true" [overrideSuggested]="true" [inputClass]="'busca-ctrl'" [autofocus]="true" [textSearching]="null" [textNoResults]="null" name="busca" [inputName]="'busca'" [placeholder]="mdl.busca.placeholder" [(ngModel)]="mdl.busca.val" [datasource]="customData" [minSearchLength]="3" [fieldTabindex]="1" [selectOnClick]="true" [openOnClick]="true" [matchClass]="'completer-highlighted-word'"></ng2-completer>
 					<span class="icon"></span>
 				</label>
 			</div>
@@ -56,17 +56,17 @@
 									<div class="people">
 										<label>
 											<span>Adultos (18 anos)</span>
-											<input (focus)="show.room = show.room !== n ? n : show.room" type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
+											<input (focus)="show.room = n" type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
 										</label>
 										<label>
 											<span>Crianças (0-17 anos)</span>
-											<input (focus)="show.room = show.room !== n ? n : show.room" min="0" max="{{mdl.room.people.limit}}" step="1" type="number" id="children[{{p.name}}]" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event, 'children[' + p.name + ']')">
+											<input (focus)="show.room = n" min="0" max="{{mdl.room.people.limit}}" step="1" type="number" id="children[{{p.name}}]" name="children[{{p.name}}]" [ngModel]="p.less18.total" (ngModelChange)="changeChild(n, $event, 'children[' + p.name + ']')">
 										</label>
 									</div>
 									<div class="children wrap">
 										<label *ngFor="let pp of p.less18.list; let nn = index">
 											<span>Criança {{ nn + 1 }}</span>
-											<input (focus)="show.room = show.room !== n ? n : show.room" type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="pp.age">
+											<input (focus)="show.room = n" type="number" max="17" min="0" placeholder="" name="childage[{{p.name}}][{{nn}}]" [(ngModel)]="p.less18.list[nn]">
 										</label>
 									</div>
 								</div>
