--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,41 @@
 .app-home {
 	padding-top: 5rem;
+	.topArrow,
+	.completer-dropdown {
+		position: relative;
+		margin-top: 16px;
+		&:before,
+		&:after {
+			content: '';
+			display: block;
+			position: absolute;
+			left: 1rem;
+			top: -16px;
+			width: 0;
+			height: 0;
+		}
+		&:before {
+			border: 0 solid transparent;
+			border-width: 0 16px 16px 16px;
+			border-bottom-color: #aaa;
+		}
+		&:after {
+			border: 0 solid transparent;
+			border-width: 0 15px 15px 15px;
+			border-bottom-color: #fff;
+			margin-top: 2px;
+			margin-left: 1px;
+		}
+		&.rightAlign:before,
+		&.rightAlign:after {
+			left: auto;
+			right: 1rem;
+		}
+		&.rightAlign:after {
+			margin-left: 0;
+			margin-right: 1px;
+		}
+	}
 	.head {
 		padding-bottom: 2rem;
 		text-align: center;
@@ -88,36 +124,14 @@
 
 				&.search {
 					.completer-dropdown-holder {
+						margin-top: 1.3rem;
 						.completer-dropdown {
 							width: 100%;
 							border: 1px solid #aaa;
 							margin: 0;
 							border-radius: 0;
 							margin-bottom: 2rem;
-							margin-top: 1rem;
 							position: relative;
-							&:before,
-							&:after {
-								content: '';
-								display: block;
-								position: absolute;
-								left: 0;
-								top: -1rem;
-								width: 0;
-								height: 0;
-							}
-							&:before {
-								border: 0 solid transparent;
-								border-width: 0 1rem 1rem 1rem;
-								border-bottom-color: #aaa;
-							}
-							&:after {
-								border: 0 solid transparent;
-								border-width: 0 .8rem .8rem .8rem;
-								border-bottom-color: #fff;
-								margin-top: 1px;
-								margin-left: 1px;
-							}
 							.completer-row-wrapper {
 								.completer-row {
 									width: 100%;
@@ -186,8 +200,7 @@
 						border: 0.08em solid #aaa;
 						border-radius: 50%;
 						left: 0.5em;
-						top: 50%;
-						margin-top: -0.25em;
+						top: 0.7rem;
 						&:before {
 							content: '';
 							display: inline-block;
@@ -252,7 +265,6 @@
 							top: 100%;
 							width: 256%;
 							border: 1px solid #aaa;
-							margin-top: 1rem;
 							padding: 1rem;
 							background-color: #fff;
 							z-index: 1;
