foco campos apartamentalizacao bugfix

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -348,6 +348,15 @@
 						.room.show {
 							display: block;
 							cursor: default !important;
+							.alignL {
+								left: -100%;
+							}
+							.alignC {
+								left: 0%;
+							}
+							.alignR {
+								left: 100%;
+							}
 						}
 						.add {
 							cursor: pointer;
