--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,13 +50,13 @@
 								<img [attr.src]="vars.icons.remove" alt="&times;">
 							</span>
 						</div>
-						<div class="content">
-							<div [ngStyle]="{left: (show.room > n ? '-100%' : (show.room === n ? '0' : '100%'))}" [attr.class]="'room' + (n + 1)" *ngFor="let p of mdl.room.people.list; let n = index;">
+						<div class="content" #quartosWrap>
+							<div [attr.class]="'room' + (n + 1) + ' ' + (show.room > n ? 'alignL' : (show.room === n ? 'alignC' : 'alignR'))" *ngFor="let p of mdl.room.people.list; let n = index;">
 								<div class="campos wrap">
 									<div class="people">
 										<label>
 											<span>Adultos (18 anos)</span>
-											<input (focus)="show.room = n" type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
+											<input (focus)="show.room = n; quartosWrap.scrollLeft = 0;" type="number" placeholder="" min="1" max="{{mdl.room.people.limit}}" id="adults[{{p.name}}]" name="adults[{{p.name}}]" [ngModel]="p.more18" (ngModelChange)="changeAdult(n, $event, 'adults[' + p.name + ']')">
 										</label>
 										<label>
 											<span>Crianças (0-17 anos)</span>
