--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -114,9 +114,9 @@
 							<td [innerHTML]="td.shortDescription"></td>
 							<td [textContent]="td.rateCurrencyCode"></td>
 							<td>{{ td.RoomRateDetailsList.RoomRateDetails.RateInfos.nonRefundable ? 'SIM' : 'NÃO' }}</td>
-							<td [textContent]="td.Markup"></td>
-							<td [textContent]="td.HotaxFinalPrice"></td>
-							<td [textContent]="td.HotaxFinalCommission"></td>
+							<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.markup"></td>
+							<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.hotaxFinalPrice"></td>
+							<td [textContent]="td.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.hotaxFinalCommission"></td>
 						</tr>
 					</tbody>
 				</table>
