new service sem conta em loop

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -171,6 +171,9 @@
 												background-color: #C0252E;
 											}
 										}
+										.completer-description {
+											display: none;
+										}
 									}
 								}
 							}
