bug campo vazio autocompleter

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -123,6 +123,9 @@
 				}
 
 				&.search {
+					[ng-reflect-model=""] + div {
+						display: none;
+					}
 					.completer-dropdown-holder {
 						margin-top: 1.3rem;
 						.completer-dropdown {
